# vknetd

./: .gitignore  99-vknetd.rules  Cargo.toml  README.md
.agent/rules/: vknetd-docs-management.md  vknetd-system-rules.md
.agent/workflows/: debug-workflow.md  end_session.md  start_session.md
.vknetd-ai/1-overview/: system_map.md
.vknetd-ai/1-overview/project-managers/: step1_kernel_layer.md  v2_kernel_hardware_keycode_plan.md
.vknetd-ai/2-memory/: checkpoint.md  decision-log.md  self-improve.md
.vknetd-ai/3-modules/engine-layer/: README.md
.vknetd-ai/3-modules/kernel-layer/: README.md
.vknetd-ai/3-modules/system-layer/: README.md
.vknetd-ai/3-modules/ui-layer/: README.md
src/: main.rs
src/engine/: caret_buffer.rs  key_mapper.rs  mod.rs  traits.rs  vietnamese.rs
src/keyboard/: mod.rs  selector.rs  uinput_dev.rs
src/safety/: mod.rs  panic_guard.rs
