[package]
name = "vknetd"
version = "0.1.0"
edition = "2021"
authors = ["vknetd contributors"]
description = "Vietnamese Kernel Native Input Daemon for Linux"

[dependencies]
evdev = "0.12"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
signal-hook = "0.3"
